--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.7.0",
+    "yamljs": "^0.3.0"
   }
 }
